# Algorithms-parallel-calculator

./: .gitignore  CMakeLists.txt  README.md
main/: Algorithm.hpp  Controller.hpp  InitCentroids.cpp  InitCentroids.hpp  KM_test.cpp  KMeans.cpp  KMeans.hpp  KMetrics.cpp  KMetrics.hpp  LVOde.hpp  LVOde_mysolution_methodA_Bmain.csv  LVOde_solution_methodB_Bmain.csv  LVOde_solution_methodB_Bsubs.csv  ODE.cpp  ODE.hpp  ODE_solution_methodA_Bmain.csv  ODE_solution_methodA_Bsubs.csv  ODE_solution_methodB_Bmain.csv  ODE_solution_methodB_Bsubs.csv  RK.hpp  RKIntegrator.hpp  RKIntegrator.inl  RKIntegrator_test.cpp  RKIntegrator_test.hpp  RKMethod.hpp  ThreadTesting.cpp  ThreadTesting.hpp  calc  firtTestProject  k-means.hpp  kmRandomChebyshev.csv  kmRandomEuclid.csv  kmRandomManhattan.csv  kmRandomMinkowski.csv  linalg.hpp  main  main.cpp  matrix.hpp  matrix.inl  matrix1.csv  (+15 more)
main/Butchers/: matrixA.csv  matrixB.csv
main/KMeans/Results/: kmKFirstChebyshev.csv  kmKFirstEuclid.csv  kmKFirstManhattan.csv  kmLargestChebyshev.csv  kmLargestEuclid.csv  kmLargestManhattan.csv  kmLargestMinkowski.csv  kmRandomChebyshev.csv  kmRandomEuclid.csv  kmRandomManhattan.csv  kmRandomMinkowski.csv  kmeansPlot.ipynb
main/KMeans/datasets/: data_prep.ipynb  test2.csv
main/RK/Butchers/: RK5(4)7FC.csv  RK5(6)8.csv
main/datasets/: data_preprocessing.ipynb
main/examples/: allExamples.hpp  allKMeansExample.hpp
main/test/: test.csv  test_3.csv  test_4.csv
main/testingFiles/: KM_test.cpp  RKIntegrator_test.cpp  RKIntegrator_test.hpp  ThreadTesting.cpp  ThreadTesting.hpp  testing.cpp  vec3.csv
(+6 files in other folders)
